--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     </head>
     <body>
 
+        
+    <div id="pad">
+        <div id="display"> [Display number here]</div>
+        <div class="digits">
+            <button id="clear">CLEAR</button>
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="0">0</button>
+            <button id="decimal">.</button>
+            <button id="delete">Del</button>
+        </div>
+        <div class = "actions">
+            <button id="divide">/</button>
+            <button id="multiply">X</button>
+            <button id="minus">-</button>
+            <button id="plus">+</button>
+            <button id="equals">=</button>
+            
+        </div>
+    </div>
+
     </body>
     <script src ="scripts.js"></script>
 </html>
