ADDED more CSS features and improved visual look git status

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
         
     <div id="pad">
-        <div id="display"> [Display number here]</div>
+        <div id="display"> 
+            <div id="output">[ Display number here]</div>
+        </div>
+
         <div class="digits">
             <button id="clear">CLEAR</button>
             <button id="7">7</button>
