COMPLETED Calculator Functions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button id="2" class="digits">2</button>
             <button id="3" class="digits">3</button>
             <button id="0" class="digits">0</button>
-            <button id="." class="digits">.</button>
+            <button id="decimal" >.</button>
             <button id="delete">Del</button>
         </div>
         <div class = "actions">
